Agregado el contenido adicional del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,13 @@
                     donde vamos a explicar las cosas increibles que se 
                     pueden hacer.
                 </p>
+                <p>
+                    los blogs son la mejor forma de compatir 
+                    unformación y tus ideas.
+                    Mucho mas que ir a conferencias o 
+                    salir en youtube excepto si eres un rockstar.
+                    Pero estadisticamente no lo eres.... por ahora.
+                </p>
             </div>
         </div>
     </body>
