--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Bienvenido a hyperblog 2.0</title>
-        <link rel="stylesheet" href="cs/estilos.css"/>
+        <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
         <div id="container">
